[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/ButtonOutline.png" type="Texture" id=1]
[ext_resource path="res://Sprites/ButtonBorder.png" type="Texture" id=2]
[ext_resource path="res://fonts/PixelArtFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scripts/Button.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 37.0969, 7.02785 )

[node name="Button" type="Area2D"]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.0393295, -0.0393295 )
shape = SubResource( 1 )

[node name="ButtonOutline" type="Sprite" parent="."]
modulate = Color( 0.411765, 0.415686, 0.415686, 1 )
show_behind_parent = true
texture = ExtResource( 1 )

[node name="ButtonBorder" type="Sprite" parent="."]
modulate = Color( 0.780392, 0.686275, 0.54902, 1 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = -14.9154
margin_top = -4.34833
margin_right = 30.0846
margin_bottom = 11.6517
rect_scale = Vector2( 0.686879, 0.686879 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "CLOSE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="." to="." method="on_hover"]
[connection signal="mouse_exited" from="." to="." method="on_mouse_exit"]
